@@ -265,3 +265,4 @@ Fixes:
     * Ecore_Input_Evas: Fix ecore_input_evas didn't check the device id of mouse event
     * Edje: fix custom states for proxy parts
     * Evas: Don't try blend on gl backened if the render option is COPY
+    * Evas text: Fixed line size calculation when using multiple fonts.
